# NUCLEO_H755ZI-Q_CMAKE_FREERTOS_VSCODE

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  ReadMe.md  launch_docker.sh
CM4/: CMakeLists.txt
CM4/Inc/: FreeRTOSConfig.h
CM4/Src/: main.c
CM7/: CMakeLists.txt
CM7/Src/: main.c  syscalls.c
Common/Src/: system_stm32h7xx.c
cmake/: arm-none-eabi-gcc.cmake  stm32_toolchain.cmake
